src/.yale/kubernetes/usecase/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-pod-label
spec:
  containers:
  - name: exwebpod
    image: exwebi
    imagePullPolicy: Never
    ports:
      - containerPort: 5056
  restartPolicy: Never
