src/.yale/kubernetes/usecase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test-pod-label

  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 5056
      nodePort: 30391
