src/.yale/kubernetes/usecase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: usecase
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /test1
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 80
          # - path: /test2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: 
          #       port:
          #         number:
